Fixed z-index in mobile nav

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -27,7 +27,7 @@ nav {
     transition: background-color .2s ease-in-out;
     color: #E3E3E3;
     
-    z-index: 10;
+    z-index: 1;
 }
 
 .nav__container {
